force-app/main/default/objects/C360_BuyingPerformanceMonthlyTOP__c.object
<CustomObject>
    <fields>
        <fullName>AllProductGroup__c</fullName>
        <description>Use in TOP and TX Summary Dashboard</description>
        <formula>IF( RecordType.Name = &apos;TX Monthly Performance&apos;,  BusinessUnit__c , 
IF(ISPICKVAL(SalesOrganization__c, &apos;1100&apos;),  TEXT(ProductGroup2__c) ,    
IF(CONTAINS(Product__r.MaterialCode__c, &apos;HAB&apos;) , &apos;HAB&apos;,
IF(CONTAINS(Product__r.MaterialCode__c, &apos;150EX&apos;) , &apos;150EX&apos;,
IF(CONTAINS(Product__r.MaterialCode__c, &apos;500EX&apos;) , &apos;500EX&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;BSEX&apos;) , &apos;BSEX&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;150SW&apos;) , &apos;150SW&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;500SW&apos;) , &apos;500SW&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;BSSW&apos;) , &apos;BSSW&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;TDAE&apos;) ,&apos;TDAE&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;TRAE&apos;) , &apos;TRAE&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;MES&apos;) , &apos;MES&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;LAB&apos;) , &apos;LAB&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;150SN&apos;) , &apos;150SN&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;500SN&apos;) , &apos;500SN&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;150BS&apos;) , &apos;150BS&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;YBIT40&apos;) , &apos;BITUMEN 40/50&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;Raf&apos;) , &apos;Raffinate&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;BZ&apos;) , &apos;BZ&apos;,
IF( CONTAINS( Product__r.Name , &apos;PX&apos;) , &apos;PX&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;YBIT60&apos;) , &apos;BITUMEN 60/70&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;YAROS&apos;) , &apos;AROMATIC SOLVATE&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;150VGO&apos;) , &apos;150VGO&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;150LFO&apos;) , &apos;150LFO&apos;,
Null))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use in TOP and TX Summary Dashboard</inlineHelpText>
        <label>All Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <description>From BI</description>
        <label>Business Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COGS__c</fullName>
        <description>From BI</description>
        <label>COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetNetProfitLocal__c</fullName>
        <label>CP target Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetNetProfitUSD__c</fullName>
        <label>CP target Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetPocketMarginLocal__c</fullName>
        <description>From BI</description>
        <label>CP target Pocket Margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetPocketMarginUSD__c</fullName>
        <description>From BI</description>
        <label>CP target Pocket Margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetRevenueLocal__c</fullName>
        <description>From BI</description>
        <label>CP target Revenue (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetRevenueUSD__c</fullName>
        <description>From BI</description>
        <label>CP target Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetVolume__c</fullName>
        <description>From BI</description>
        <label>CP target Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <formula>Customer__r.AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CumCPTargetVolume__c</fullName>
        <description>From BI</description>
        <label>Cum CP Target Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetNetProfitLocal__c</fullName>
        <label>Cum CP target Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetNetProfitUSD__c</fullName>
        <label>Cum CP target Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetPocketMarginLocal__c</fullName>
        <description>From BI</description>
        <label>Cum CP target Pocket Margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetPocketMarginUSD__c</fullName>
        <description>From BI</description>
        <label>Cum CP target Pocket Margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetRevenueLocal__c</fullName>
        <description>From BI</description>
        <label>Cum CP target Revenue (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetRevenueUSD__c</fullName>
        <description>From BI</description>
        <label>Cum CP target Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumLYNetProfitLocal__c</fullName>
        <label>Cum LY Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumLYNetProfitUSD__c</fullName>
        <label>Cum LY Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumLYPocketmarginLocal__c</fullName>
        <description>From BI</description>
        <label>Cum LY Pocket margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumLYPocketmarginUSD__c</fullName>
        <description>From BI</description>
        <label>Cum LY Pocket margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumLastYearVolume__c</fullName>
        <description>From BI</description>
        <label>Cum Last Year Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumNetProfitLocal__c</fullName>
        <label>Cum Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumNetProfitUSD__c</fullName>
        <label>Cum Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumPocketmarginLocal__c</fullName>
        <description>From BI</description>
        <label>Cum Pocket margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumPocketmarginUSD__c</fullName>
        <description>From BI</description>
        <label>Cum Pocket margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumRevenueLocal__c</fullName>
        <label>Cum Revenue (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumRevenueUSD__c</fullName>
        <label>Cum Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumVolume__c</fullName>
        <description>From BI</description>
        <label>Cum Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyLocal__c</fullName>
        <description>From SAP, Allocation, and BI Currency (Local)</description>
        <label>Currency (Local)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerGroup2__c</fullName>
        <label>Customer-Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd party</fullName>
                </value>
                <value>
                    <fullName>AAS TRADE</fullName>
                </value>
                <value>
                    <fullName>ACTION FUEL</fullName>
                </value>
                <value>
                    <fullName>AEC Energy</fullName>
                </value>
                <value>
                    <fullName>Aditya</fullName>
                </value>
                <value>
                    <fullName>Atlas</fullName>
                </value>
                <value>
                    <fullName>B.E.N.T</fullName>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>BCP Indo China</fullName>
                </value>
                <value>
                    <fullName>CO-OP</fullName>
                </value>
                <value>
                    <fullName>CYGNUS OIL</fullName>
                </value>
                <value>
                    <fullName>Center Trade</fullName>
                </value>
                <value>
                    <fullName>Chevron</fullName>
                </value>
                <value>
                    <fullName>Chevron&apos;s Export</fullName>
                </value>
                <value>
                    <fullName>Chevron&apos;s Indo China</fullName>
                </value>
                <value>
                    <fullName>EAST23</fullName>
                </value>
                <value>
                    <fullName>ESSO</fullName>
                </value>
                <value>
                    <fullName>Export F44</fullName>
                </value>
                <value>
                    <fullName>Export FO(IMO)</fullName>
                </value>
                <value>
                    <fullName>Export FOC</fullName>
                </value>
                <value>
                    <fullName>Export Fuel Oil</fullName>
                </value>
                <value>
                    <fullName>Export HEAVY Naphtha</fullName>
                </value>
                <value>
                    <fullName>Export HSD</fullName>
                </value>
                <value>
                    <fullName>Export Jet</fullName>
                </value>
                <value>
                    <fullName>Export LIGHT Naphtha</fullName>
                </value>
                <value>
                    <fullName>Export LPG</fullName>
                </value>
                <value>
                    <fullName>FUSION</fullName>
                </value>
                <value>
                    <fullName>GOODNESS</fullName>
                </value>
                <value>
                    <fullName>GPSC</fullName>
                </value>
                <value>
                    <fullName>GREAT T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerGroup__c</fullName>
        <description>In common field from SAP, Allocation and BI</description>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PT-GROUP</fullName>
                </value>
                <value>
                    <fullName>SHELL-FZ</fullName>
                </value>
                <value>
                    <fullName>CHEVRON-FZ</fullName>
                </value>
                <value>
                    <fullName>PTTOR-FZ</fullName>
                </value>
                <value>
                    <fullName>SHELL-EX</fullName>
                </value>
                <value>
                    <fullName>CHEVRON-EX</fullName>
                </value>
                <value>
                    <fullName>PTTOR-EX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerTLBGroup__c</fullName>
        <label>Customer TLB Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HCI</fullName>
                </value>
                <value>
                    <fullName>Jell Phama Group</fullName>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>Rosy Ring</fullName>
                </value>
                <value>
                    <fullName>MATTA</fullName>
                </value>
                <value>
                    <fullName>H&amp;R</fullName>
                </value>
                <value>
                    <fullName>MPCL</fullName>
                </value>
                <value>
                    <fullName>KISMAT</fullName>
                </value>
                <value>
                    <fullName>SPG</fullName>
                </value>
                <value>
                    <fullName>PTTOR</fullName>
                </value>
                <value>
                    <fullName>ANDOH</fullName>
                </value>
                <value>
                    <fullName>GENC</fullName>
                </value>
                <value>
                    <fullName>SFC</fullName>
                </value>
                <value>
                    <fullName>BRS</fullName>
                </value>
                <value>
                    <fullName>Feedco</fullName>
                </value>
                <value>
                    <fullName>Meiwa</fullName>
                </value>
                <value>
                    <fullName>TVJ</fullName>
                </value>
                <value>
                    <fullName>Hanwa</fullName>
                </value>
                <value>
                    <fullName>Gandhar</fullName>
                </value>
                <value>
                    <fullName>Azelis</fullName>
                </value>
                <value>
                    <fullName>Wintrade</fullName>
                </value>
                <value>
                    <fullName>SPG OIL PTE LTD</fullName>
                </value>
                <value>
                    <fullName>SQI</fullName>
                </value>
                <value>
                    <fullName>H&amp;amp;R</fullName>
                </value>
                <value>
                    <fullName>SOLVEN SOLVENTES E QUIMICOS LTDA.</fullName>
                </value>
                <value>
                    <fullName>GPP</fullName>
                </value>
                <value>
                    <fullName>SIETCO</fullName>
                </value>
                <value>
                    <fullName>OBITECH PACIFIC</fullName>
                </value>
                <value>
                    <fullName>WBF</fullName>
                </value>
                <value>
                    <fullName>SYNTOP CHEMICAL CO.,LTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <description>In common field from SAP, Allocation and BI</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Monthly Lifting and Allocation</relationshipLabel>
        <relationshipName>TOP_Month_Buying_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Year + Month</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExRefineryPrice__c</fullName>
        <description>From Allocation</description>
        <label>Ex Refinery Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightcostLocal__c</fullName>
        <label>Freight cost (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightcostUSD__c</fullName>
        <description>From BI</description>
        <label>Freight cost (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <description>From BI</description>
        <label>Incoterm</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN001</fullName>
                    <label>ADHESIVE</label>
                </value>
                <value>
                    <fullName>IN002</fullName>
                    <label>AGROCHEMICAL</label>
                </value>
                <value>
                    <fullName>IN003</fullName>
                    <label>COATINGS/PAINTS</label>
                </value>
                <value>
                    <fullName>IN004</fullName>
                    <label>INK FORMULATOR</label>
                </value>
                <value>
                    <fullName>IN005</fullName>
                    <label>OTHER/RETAIL</label>
                </value>
                <value>
                    <fullName>IN006</fullName>
                    <label>PETROCHEMICAL</label>
                </value>
                <value>
                    <fullName>IN007</fullName>
                    <label>PRINTING/PACKAGING</label>
                </value>
                <value>
                    <fullName>IN008</fullName>
                    <label>RESIN</label>
                </value>
                <value>
                    <fullName>IN009</fullName>
                    <label>THINNER</label>
                </value>
                <value>
                    <fullName>IN010</fullName>
                    <label>TYRE</label>
                </value>
                <value>
                    <fullName>IN011</fullName>
                    <label>TRADER</label>
                </value>
                <value>
                    <fullName>IN999</fullName>
                    <label>NOT DEFINE</label>
                </value>
                <value>
                    <fullName>IN012</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intergroup__c</fullName>
        <label>InterGroup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IG001</fullName>
                    <label>EXTERNAL</label>
                </value>
                <value>
                    <fullName>IG002</fullName>
                    <label>JSKEM</label>
                </value>
                <value>
                    <fullName>IG003</fullName>
                    <label>LABIX</label>
                </value>
                <value>
                    <fullName>IG004</fullName>
                    <label>TET</label>
                </value>
                <value>
                    <fullName>IG005</fullName>
                    <label>TLB</label>
                </value>
                <value>
                    <fullName>IG006</fullName>
                    <label>TM</label>
                </value>
                <value>
                    <fullName>IG007</fullName>
                    <label>TOP</label>
                </value>
                <value>
                    <fullName>IG008</fullName>
                    <label>TOP SPP</label>
                </value>
                <value>
                    <fullName>IG009</fullName>
                    <label>TPX</label>
                </value>
                <value>
                    <fullName>IG010</fullName>
                    <label>TSR</label>
                </value>
                <value>
                    <fullName>IG011</fullName>
                    <label>TSTH</label>
                </value>
                <value>
                    <fullName>IG012</fullName>
                    <label>TSV</label>
                </value>
                <value>
                    <fullName>IG999</fullName>
                    <label>NOT DEFINE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemCategory__c</fullName>
        <description>Item Category</description>
        <label>Item Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyTarget__c</fullName>
        <description>For update target</description>
        <label>Key Target</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastYearMonthlyPocketmarginLocal__c</fullName>
        <label>Last Year:Monthly Pocket margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastYearMonthlyPocketmarginUSD__c</fullName>
        <label>Last Year:Monthly Pocket margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastYearNetProfitLocal__c</fullName>
        <label>Last Year Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastYearNetProfitUSD__c</fullName>
        <label>Last Year Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastYearPocketmarginLocal__c</fullName>
        <description>From BI</description>
        <label>Last Year Pocket margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastYearPocketmarginUSD__c</fullName>
        <description>From BI</description>
        <label>Last Year Pocket margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastYearQuantity__c</fullName>
        <description>From BI</description>
        <label>Last Year Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastYearRevenueLocal__c</fullName>
        <description>From BI</description>
        <label>Last Year Revenue (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastYearRevenueUSD__c</fullName>
        <description>From BI</description>
        <label>Last Year Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LossGainfxLocal__c</fullName>
        <description>From BI</description>
        <label>Loss/Gain fx (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LossGainfxUSD__c</fullName>
        <description>From BI</description>
        <label>Loss/Gain fx (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month</description>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetProfitLocal__c</fullName>
        <description>From BI</description>
        <label>Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetProfitUSD__c</fullName>
        <description>From BI</description>
        <label>Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValueIncLocal__c</fullName>
        <description>From Allocation</description>
        <label>Net Value Inc (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValueLastYearLocal__c</fullName>
        <description>From BI</description>
        <label>Net Value Last Year (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValueLastYearUSD__c</fullName>
        <description>From BI</description>
        <label>Net Value Last Year (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValueLocal__c</fullName>
        <description>From SAP, Allocation, and BI</description>
        <label>Net Value (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValueUSD__c</fullName>
        <description>From Allocation, and BI Net Value (USD)</description>
        <label>Net Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PackType__c</fullName>
        <label>Pack Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <description>From SAP and Allocation Plant</description>
        <label>Plant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PocketmarginLocal__c</fullName>
        <description>From BI</description>
        <label>Pocket margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PocketmarginUSD__c</fullName>
        <description>From BI</description>
        <label>Pocket margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Product__r.MaterialCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup2__c</fullName>
        <label>Product-Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Export FO(IMO)</fullName>
                </value>
                <value>
                    <fullName>Export FOC</fullName>
                </value>
                <value>
                    <fullName>F44</fullName>
                </value>
                <value>
                    <fullName>FMGO 0.7% S</fullName>
                </value>
                <value>
                    <fullName>FO &quot;380 cSt&quot;</fullName>
                </value>
                <value>
                    <fullName>FO (EXP)</fullName>
                </value>
                <value>
                    <fullName>FO(IMO)</fullName>
                </value>
                <value>
                    <fullName>FOA</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>GB 91</fullName>
                </value>
                <value>
                    <fullName>GB 95</fullName>
                </value>
                <value>
                    <fullName>GH 91</fullName>
                </value>
                <value>
                    <fullName>GH 95</fullName>
                </value>
                <value>
                    <fullName>GH95 E20</fullName>
                </value>
                <value>
                    <fullName>HNAPH</fullName>
                </value>
                <value>
                    <fullName>HSD</fullName>
                </value>
                <value>
                    <fullName>HSD EXP</fullName>
                </value>
                <value>
                    <fullName>Heavy Naphtha EXP</fullName>
                </value>
                <value>
                    <fullName>JET-A1</fullName>
                </value>
                <value>
                    <fullName>JET-A1 EXP</fullName>
                </value>
                <value>
                    <fullName>JP-8</fullName>
                </value>
                <value>
                    <fullName>Kero</fullName>
                </value>
                <value>
                    <fullName>LNAPH</fullName>
                </value>
                <value>
                    <fullName>LPG</fullName>
                </value>
                <value>
                    <fullName>Light Naphtha EXP</fullName>
                </value>
                <value>
                    <fullName>PLATFORMATE (TPX)</fullName>
                </value>
                <value>
                    <fullName>SULP. (KT)</fullName>
                </value>
                <value>
                    <fullName>UG 92</fullName>
                </value>
                <value>
                    <fullName>UG 95</fullName>
                </value>
                <value>
                    <fullName>UG 95 EXP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductGroupReport__c</fullName>
        <formula>IF(CONTAINS(Product__r.MaterialCode__c, &apos;HAB&apos;) ,   &apos;HAB&apos;, 
 IF(CONTAINS(Product__r.MaterialCode__c, &apos;150EX&apos;) , &apos;150EX&apos;, 
 IF(CONTAINS(Product__r.MaterialCode__c, &apos;500EX&apos;) , &apos;500EX&apos;,  
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;BSEX&apos;) , &apos;BSEX&apos;,  
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;150SW&apos;) , &apos;150SW&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;500SW&apos;) , &apos;500SW&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;BSSW&apos;) , &apos;BSSW&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;TDAE&apos;) ,&apos;TDAE&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;TRAE&apos;) , &apos;TRAE&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;MES&apos;) , &apos;MES&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;LAB&apos;) , &apos;LAB&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;150SN&apos;) , &apos;150SN&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;500SN&apos;) , &apos;500SN&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;150BS&apos;) , &apos;150BS&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;YBIT40&apos;) , &apos;BITUMEN 40/50&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;Raf&apos;) , &apos;Raffinate&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;BZ&apos;) , &apos;BZ&apos;, 
 IF( CONTAINS( Product__r.Name , &apos;PX&apos;) ,  &apos;PX&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;YBIT60&apos;) , &apos;BITUMEN 60/70&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;YAROS&apos;) , &apos;AROMATIC SOLVATE&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;150VGO&apos;) , &apos;150VGO&apos;, 
 IF( CONTAINS(Product__r.MaterialCode__c, &apos;150LFO&apos;) , &apos;150LFO&apos;, 
 Null))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product TLB Group</label>
        <type>Text</type>
    </fields>
</CustomObject>